// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2. lead one and one tablet slice 1`] = `<div />`;

exports[`3. lead one full width tablet slice 1`] = `<div />`;

exports[`4. lead two no pic and two tablet slice 1`] = `<div />`;

exports[`5. secondary one tablet slice 1`] = `<div />`;

exports[`6. secondary four tablet slice 1`] = `<div />`;

exports[`7. secondary one and columnist 1`] = `<div />`;

exports[`8. secondary two and two slice 1`] = `<div />`;

<<<<<<< HEAD
exports[`7. secondary one and columnist 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`8. secondary two and two slice 1`] = `
<div>
  <div>
    <div>
      <TileV
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileV
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <TileG
      tileName="support1"
    />
  </div>
  <div />
  <div>
    <TileG
      tileName="support2"
    />
  </div>
</div>
`;

exports[`9. lead one and four slice 1`] = `
<div>
  <TileAC
    tileName="lead"
  />
  <div>
    <TileAD
      tileName="support1"
    />
    <div />
    <TileAD
      tileName="support2"
    />
    <div />
    <TileAD
      tileName="support3"
    />
    <div />
    <TileAD
      tileName="support4"
    />
  </div>
</div>
`;

exports[`10. secondary two no pic and two slice 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;
=======
exports[`9. secondary two no pic and two slice 1`] = `<div />`;
>>>>>>> feat: Huge and Wide support for slices
